# rs-dfu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.sh
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: error.rs  list.rs  main.rs  read.rs  reboot.rs  write.rs
cmake/: rs_dfu-config.cmake
dfu/: Cargo.toml
dfu/src/: connection.rs  descriptor.rs  device.rs  error.rs  interface.rs  lib.rs  memory.rs
examples/cpp/: CMakeLists.txt  main.cpp
src/: lib.rs
uf2/: Cargo.toml
uf2/src/: iter.rs  lib.rs
